--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header class="banner">
         <h1>
             <div class="banner-text"> All thinks are<br>possible if you <br> belive
-                <div class="sub-title">There are many variations of passages of Lorem Ipsum available, but the majority
-                have suffered alteration in some form, by injected humour, or randomised words</div>
+                <div class="sub-title">I live in Bangladesh. I am a Bangladeshi. I love my country very much. I feel pruod. everyone in our country speak in banga. IT is our mother language. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, neque.</div>
                 <button class="btn">contact us</button>
         </h1>
 
